added new notes

--- a/Mathematics/Time-Series/Practical-Time-Series-Analysis/Understanding-Time-Series.ipynb
+++ b/Mathematics/Time-Series/Practical-Time-Series-Analysis/Understanding-Time-Series.ipynb
@@ -69,7 +69,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## First Order Exponential Smoothing\n",
+    "\n",
+    "#### First-order exponential smoothing is a straightforward and widely used technique for forecasting time series data, particularly when you want to smooth out short-term fluctuations and predict future values based on past data. This method is especially useful when the series does not display strong trend or seasonal patterns.\n",
+    "- Smoothing Constant (α): This method involves a smoothing constant α, often referred to as the smoothing factor, which ranges from 0 to 1. This factor determines how much weight is given to the most recent observations relative to older data. A higher α value gives more weight to recent data, making the forecast more responsive to changes. Conversely, a lower α results in smoother forecasts that are less responsive to recent changes.\n",
+    "- Forecast Equation: The forecast for the next period\n",
+    "\n",
+    "## When to Use First-Order Exponential Smoothing\n",
+    "#### This method is best suited for data without a strong trend or seasonal effects. It's particularly effective for:\n",
+    "\n",
+    "- Smoothing out random variations in data.\n",
+    "- Providing a simple forecasting approach that can be implemented quickly and easily.\n",
+    "- Cases where model simplicity and interpretability are more desirable than capturing complex behaviors in the data."
+   ]
   }
  ],
  "metadata": {
