added new nodes

--- a/Mathematics/Time-Series/Practical-Time-Series-Analysis/Understanding-Time-Series.ipynb
+++ b/Mathematics/Time-Series/Practical-Time-Series-Analysis/Understanding-Time-Series.ipynb
@@ -63,7 +63,16 @@
     "\n",
     "#### If first order exponential smoothing does not perform well, then there is a trend in the time series data. The trend is commonly observed in many domains such as when marketing campaigns are run by e-commerce companies, the sales rise or any good annual performance by a company will have a bullish effect on its stock prices. The linear trend can occur due to linear trend between time and response:\n",
     "\n",
-    "- xt = constant + ωt + εt"
+    "- xt = constant + ωt + εt\n",
+    "\n",
+    "#### Second-order exponential smoothing, also known as Holt’s linear trend method, extends the simple first-order exponential smoothing to better handle time series data that exhibits trends. This method is particularly useful when the data show a consistent upward or downward trend over time.\n",
+    "\n",
+    "- Level Equation: This updates the baseline level of the series.\n",
+    "- Trend Equation: This updates the trend, which is the estimated change between time periods.\n",
+    "\n",
+    "#### Parameters\n",
+    "- α: The smoothing constant for the level. It controls the rate at which the influence of the observations at previous time steps decays exponentially.\n",
+    "- β: The smoothing constant for the trend. It similarly controls the rate at which the influence of changes in trend decays."
    ]
   },
   {
