added new nodes

--- a/Mathematics/Time-Series/Practical-Time-Series-Analysis/Understanding-Time-Series.ipynb
+++ b/Mathematics/Time-Series/Practical-Time-Series-Analysis/Understanding-Time-Series.ipynb
@@ -72,7 +72,9 @@
     "\n",
     "#### Parameters\n",
     "- α: The smoothing constant for the level. It controls the rate at which the influence of the observations at previous time steps decays exponentially.\n",
-    "- β: The smoothing constant for the trend. It similarly controls the rate at which the influence of changes in trend decays."
+    "- β: The smoothing constant for the trend. It similarly controls the rate at which the influence of changes in trend decays.\n",
+    "\n",
+    "#### Holt’s linear trend method is best applied to data with trends but without seasonal variations. If the data also contain seasonal effects, then Holt-Winters seasonal method, which includes a seasonal component, would be more appropriate."
    ]
   },
   {
