added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Understanding-Time-Series.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Understanding-Time-Series.ipynb
@@ -35,7 +35,18 @@
     "\n",
     "#### Next we see the seasonal component in figure 1.5. The seasonal component captures the seasonal variation, which is a cycle that occurs over a fixed period of time. We can see that over the course of a year, or four quarters, the earnings per share start low, increase, and decrease again at the end of the year.\n",
     "\n",
-    "#### Therefore, we can say that the seasonal component shows how we deviate from the trend. Sometimes we have a positive deviation, and we get a peak in the Observed graph. Other times, we have a negative deviation, and we see a trough in Observed."
+    "#### Therefore, we can say that the seasonal component shows how we deviate from the trend. Sometimes we have a positive deviation, and we get a peak in the Observed graph. Other times, we have a negative deviation, and we see a trough in Observed.\n",
+    "\n",
+    "#### Finally, the last graph in figure 1.2 shows the residuals, which is what cannot be explained by either the trend or the seasonal components. We can think of the residuals as adding the Trend and Seasonal graphs together and comparing the value at each point in time to the Observed graph. For certain points, we might get the exact same value as in Observed, in which case the residual will be zero. In other cases, the value is different from the one in Observed, so the Residuals graph shows what value must be added to Trend and Seasonal in order to adjust the result and get the same value as in Observed. Residuals usually correspond to random errors, also termed white noise, as we will discuss in chapter 3. They represent information that we cannot model or predict, since it is completely random, as shown in figure 1.6.\n",
+    "\n",
+    "## Time series decomposition\n",
+    "\n",
+    "- Time series decomposition is a process by which we separate a time series into its components: trend, seasonality, and residuals.\n",
+    "- The trend represents the slow-moving changes in a time series. It is responsible for making the series gradually increase or decrease over time.\n",
+    "- The seasonality component represents the seasonal pattern in the series. The cycles occur repeatedly over a fixed period of time.\n",
+    "- The residuals represent the behavior that cannot be explained by the trend and seasonality components. They correspond to random errors, also termed white noise.\n",
+    "\n",
+    "#### Already we can intuitively see how each component affects our work when forecasting. If a time series exposes a certain trend, then we’ll expect it to continue in the future. Similarly, if we observe a strong seasonality effect, this is likely going to continue, and our forecasts must reflect that. Later in the book, you’ll see how to account for these components and include them in your models to forecast more complex time series.\n"
    ]
   },
   {
