added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Understanding-Time-Series.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Understanding-Time-Series.ipynb
@@ -50,12 +50,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "###"
+    "#### If you observe seasonality, then a SARIMA model would be relevant, because this model uses seasonal effects to produce forecasts. If you have information on wind speed and humidity, you could take that into account using the SARIMAX model, because you can feed it with information from exogenous variables, such as wind speed and humidity. We will explore these models in detail in chapters 8 and 9.\n",
+    "\n",
+    "#### If you managed to collect a large amount of data, such as the daily minimum temperature of the last 20 years, you could use neural networks to leverage this very large amount of training data. Unlike statistical learning methods, deep learning tends to produce better models, as more data is used for training."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Whichever model you develop, you will use part of the training data as a test set to evaluate your model’s performance. The test set will always be the most recent data points, and it must be representative of the forecasting horizon.\n",
+    "\n",
+    "#### In this case, since your horizon is one week, you can remove the last seven data points from your training set to place them in a test set. Then, when each model is trained, you can produce one-week forecasts and compare the results to the test set. The model’s performance can be assessed by computing an error metric, such as the mean squared error (MSE). This is a way to evaluate how far your predictions are from the real values. The model with the lowest MSE will be your best-performing model, and it is the one that will move on to the next step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "- A time series is a set of data points ordered in time.\n",
+    "- Examples of time series are the closing price of a stock or the temperature outside.\n",
+    "- Time series can be decomposed into three components: a trend, a seasonal component, and residuals.\n",
+    "- It is important to have a goal when forecasting and to monitor the model once it’s deployed. This will ensure the success and longevity of the project.\n",
+    "- Never change the order of a time series when modeling. Shuffling the data is not allowed."
    ]
   }
  ],
