computed arithmetic mean

--- a/Mathematics/Time-Series/Forecasting-With-Python/Future-Prediction.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Future-Prediction.ipynb
@@ -665,6 +665,20 @@
     "fig.autofmt_xdate()\n",
     "plt.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We can learn from this baseline that future values likely depend on past values that are not too far back in history. This is a sign of autocorrelation, and we will dive deep into this subject in chapter 5. For now, let’s look at another baseline that we could develop for this situation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
