added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Future-Prediction.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Future-Prediction.ipynb
@@ -675,10 +675,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "last = train.data.iloc[-1]\n",
+    " \n",
+    "print(last)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bb/2qsf8cm95jg05zrms2_8m2qr0000gn/T/ipykernel_67950/155972364.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  test.loc[:, 'pred_last'] = last\n"
+     ]
+    }
+   ],
+   "source": [
+    "test.loc[:, 'pred_last'] = last"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.457277908606535\n"
+     ]
+    }
+   ],
+   "source": [
+    "mape_last = mape(test['data'], test['pred_last'])\n",
+    " \n",
+    "print(mape_last)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bb/2qsf8cm95jg05zrms2_8m2qr0000gn/T/ipykernel_67950/1682665936.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  test.loc[:, 'pred_last_season'] = train['data'][-4:].values\n"
+     ]
+    }
+   ],
+   "source": [
+    "test.loc[:, 'pred_last_season'] = train['data'][-4:].values "
+   ]
   }
  ],
  "metadata": {
