added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Future-Prediction.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Future-Prediction.ipynb
@@ -754,6 +754,36 @@
    "source": [
     "test.loc[:, 'pred_last_season'] = train['data'][-4:].values "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.561658552433654\n"
+     ]
+    }
+   ],
+   "source": [
+    "mape_naive_seasonal = mape(test['data'], test['pred_last_season'])\n",
+    "print(mape_naive_seasonal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### MAPE stands for mean absolute percentage error, and it is an intuitive measure of how much a predicted value deviates from the actual value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
