added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Random-walk.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Random-walk.ipynb
@@ -70,6 +70,45 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Identifying a random walk\n",
+    "\n",
+    "#### To determine if our time series can be approximated as a random walk or not, we must first define a random walk. In the context of time series, a random walk is defined as a series whose first difference is stationary and uncorrelated.\n",
+    "\n",
+    "- A random walk is a series whose first difference is stationary and uncorrelated.\n",
+    "- This means that the process moves completely at random.\n",
+    "\n",
+    "\n",
+    "#### Stationarity\n",
+    "#### A stationary time series is one whose statistical properties do not change over time. In other words, it has a constant mean, variance, and autocorrelation, and these properties are independent of time.\n",
+    "\n",
+    "#### Many forecasting models assume stationarity. The moving average model (chapter 4), autoregressive model (chapter 5), and autoregressive moving average model (chapter 6) all assume stationarity. These models can only be used if we verify that the data is indeed stationary. Otherwise, the models will not be valid, and the forecasts will not be reliable. Intuitively, this makes sense, because if the data is non-stationary, its properties are going to change over time, which would mean that our model parameters must also change through time. This means that we cannot possibly derive a function of future values as a function of past values, since the coefficients change at each point in time, making forecasting unreliable.\n",
+    "\n",
+    "## Stationarity\n",
+    "\n",
+    "- A stationary process is one whose statistical properties do not change over time.\n",
+    "- A times series is said to be stationary if its mean, variance, and autocorrelation do not change over time.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The simplest transformation one can apply is differencing. This transformation helps stabilize the mean, which in turn removes or reduces the trend and seasonality effects. Differencing involves calculating the series of changes from one timestep to another. To accomplish that, we simply subtract the value of the previous timestep yt–1 from the value in the present yt to obtain the differenced value y't.\n",
+    "\n",
+    "#### Differencing is a transformation that calculates the change from one timestep to another. This transformation is useful for stabilizing the mean.\n",
+    "\n",
+    "#### Applying a log function to the series can stabilize its variance.\n",
+    "\n",
+    "#### It is possible to difference a time series many times. Taking the difference once is applying a first-order differencing. Taking it a second time would be a second-order differencing. It is often not necessary to difference more than twice to obtain a stationary series.\n",
+    "\n",
+    "##### Keep in mind that when we model a time series that has been transformed, we must untransform it to return the results of the model to the original units of measurement. The formal term for undoing a transformation is inverse transform. Therefore, if you apply a log transformation to your data, make sure you raise your forecast values to the power of 10 in order to bring the values back to their original magnitude. That way, your predictions will make sense in their original context."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
