added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Random-walk.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Random-walk.ipynb
@@ -120,6 +120,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Let’s consider a very simple time series where the present value yt only depends on its past value yt–1 subject to a coefficient α1, a constant C, and white noise ϵt. We can write the following general expression:\n",
+    "\n",
+    "- yt = C + α1yt–1 + ϵt\n",
+    "\n",
+    "#### In equation 3.8, ϵt represents some error that we cannot predict, and C is a constant. Here, α1 is the root of the time series. This time series will be stationary only if the root lies within the unit circle. Therefore, its value must be between –1 and 1. Otherwise the series is non-stationary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
