added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Random-walk.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Random-walk.ipynb
@@ -131,6 +131,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Let’s verify this by simulating two different series. One will be stationary and the other will have a unit root, meaning that it will not be stationary. The stationary process follows equation 3.9, and the non-stationary process follows equation 3.10.\n",
+    "\n",
+    "- yt = 0.5yt–1 + ϵt\n",
+    "- Equation 3.9\n",
+    "\n",
+    "- yt = yt–1 + ϵt\n",
+    "- Equation 3.10\n",
+    "\n",
+    "#### In equation 3.9, the root of the series is 0.5. Since it is between –1 and 1, this series is stationary. On the other hand, in equation 3.10, the root of the series is 1, meaning that it is a unit root. Therefore, we expect this series to be non-stationary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
