added all changes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Random-walk.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Random-walk.ipynb
@@ -140,7 +140,9 @@
     "- yt = yt–1 + ϵt\n",
     "- Equation 3.10\n",
     "\n",
-    "#### In equation 3.9, the root of the series is 0.5. Since it is between –1 and 1, this series is stationary. On the other hand, in equation 3.10, the root of the series is 1, meaning that it is a unit root. Therefore, we expect this series to be non-stationary."
+    "#### In equation 3.9, the root of the series is 0.5. Since it is between –1 and 1, this series is stationary. On the other hand, in equation 3.10, the root of the series is 1, meaning that it is a unit root. Therefore, we expect this series to be non-stationary.\n",
+    "\n",
+    "#### By now, you should be convinced that a series with a unit root is not a stationary series. In both figures 3.7 and 3.8, the mean and variance were dependent on time, as their values kept changing. Meanwhile, the series with a root of 0.5 displayed a constant mean and variance over time, demonstrating that this series is indeed stationary."
    ]
   },
   {
