added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Random-walk.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Random-walk.ipynb
@@ -169,6 +169,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### In other words, it measures the correlation of the time series with itself.\n",
+    "\n",
+    "#### For example, we can calculate the autocorrelation coefficient between yt and yt–1. In this case, the lag is equal to 1, and the coefficient would be denoted as r1. Similarly, we can calculate the autocorrelation between yt and yt–2. Then the lag would be 2, and the coefficient would be denoted as r2. When we plot the ACF function, the coefficient is the dependent variable, while the lag is the independent variable. Note that the autocorrelation coefficient at lag 0 will always be equal to 1. This makes sense intuitively, because the linear relationship between a variable and itself at the same timestep should be perfect, and therefore equal to 1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
