--- a/Mathematics/Time-Series/Forecasting-With-Python/Random-walk.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Random-walk.ipynb
@@ -601,6 +601,29 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### In this section, we’ll forecast a random walk on a long horizon. This is not an ideal case—a random walk can unexpectedly increase or decrease because past observations are not predictive of changes in the future. Here we’ll continue working with our simulated random walk from section 3.1.1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    " \n",
+    "df = pd.DataFrame({'value': random_walk})\n",
+    " \n",
+    "train = df[:800]\n",
+    "test = df[800:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
