added new models

--- a/Mathematics/Time-Series/Forecasting-With-Python/Random-walk.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Random-walk.ipynb
@@ -1220,6 +1220,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "- A random walk is a process where the first difference is stationary and not autocorrelated.\n",
+    "- We cannot use statistical or deep learning techniques on a random walk, since it moves at random in the future. Therefore, we must use naive forecasts.\n",
+    "- A stationary time series is one whose statistical properties (mean, variance, autocorrelation) do not change over time.\n",
+    "- The augmented Dickey-Fuller (ADF) test is used to assess stationarity by testing for unit roots.\n",
+    "- The null hypothesis of the ADF test is that there is a unit root in the series. If the ADF statistic is a large negative value and the p-value is less than 0.05, the null hypothesis is rejected, and the series is stationary.\n",
+    "- Transformations are used to make a series stationary. Differencing can stabilize the trend and seasonality, while logarithms stabilize the variance.\n",
+    "- Autocorrelation measures the correlation between a variable and itself at a previous timestep (lag). The autocorrelation function (ACF) shows how the autocorrelation changes as a function of the lag.\n",
+    "- Ideally, we will forecast a random walk in the short term or the next timestep. That way, we do not allow for random numbers to accumulate, which will degrade the quality of our forecasts in the long term."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
