added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Modeling-Moving-Average.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Modeling-Moving-Average.ipynb
@@ -314,6 +314,18 @@
     "- The values outside of the shaded area is the signal and will help us create a better model that fits the data\n",
     "- The values in the shaded area can be categorized as noise and significant to the data"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### You can see how the ACF plot helps us determine the order of a moving average process. The ACF plot will show significant autocorrelation coefficients up until lag q, after which all coefficients will be non-significant. We can then conclude that we have a moving average process of order q, or an MA(q) process."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
