--- a/Mathematics/Time-Series/Forecasting-With-Python/Modeling-Moving-Average.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Modeling-Moving-Average.ipynb
@@ -721,6 +721,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3244709245141255\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error\n",
+    " \n",
+    "mae_MA_undiff = mean_absolute_error(df['widget_sales'].iloc[450:], df['pred_widget_sales'].iloc[450:])\n",
+    " \n",
+    "print(mae_MA_undiff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Outlined Process for Moving Average problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Sample Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/moving-average-process.png)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
