added new models

--- a/Mathematics/Time-Series/Forecasting-With-Python/Modeling-Moving-Average.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Modeling-Moving-Average.ipynb
@@ -758,7 +758,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Summary\n",
+    "\n",
+    "- A moving average process states that the present value is linearly dependent on the mean, present error term, and past error terms. The error terms are normally distributed.\n",
+    "- You can identify the order q of a stationary moving average process by studying the ACF plot. The coefficients are significant up until lag q only.\n",
+    "- You can predict up to q steps into the future because the error terms are not observed in the data and must be recursively estimated.\n",
+    "- Predicting beyond q steps into the future will simply return the mean of the series. To avoid that, you can apply rolling forecasts.\n",
+    "- If you apply a transformation to the data, you must undo it to bring your predictions back to the original scale of the data.\n",
+    "- The moving average model assumes the data is stationary. Therefore, you can only use this model on stationary data."
+   ]
   }
  ],
  "metadata": {
