added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Modeling-autoregressive.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Modeling-autoregressive.ipynb
@@ -707,6 +707,24 @@
     "\n",
     "plt.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- An autoregressive process states that the present value is linearly dependent on its past values and an error term.\n",
+    "\n",
+    "- If the ACF plot of a stationary process shows a slow decay, then you likely have an autoregressive process.\n",
+    "\n",
+    "- The partial autocorrelation measures the correlation between two lagged values of a time series when you remove the effect of the other autocorrelated lagged values.\n",
+    "\n",
+    "- Plotting the PACF of a stationary autoregressive process will show the order p of the process. The coefficients will be significant up until lag p only."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
