added new visuals

--- a/Mathematics/Time-Series/Forecasting-With-Python/Modeling-complex-time.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Modeling-complex-time.ipynb
@@ -8,10 +8,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "![Sample Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/ARMA-process.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
