--- a/Mathematics/Time-Series/Forecasting-With-Python/Modeling-complex-time.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Modeling-complex-time.ipynb
@@ -165,6 +165,296 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Therefore, the residuals must be uncorrelated and independently distributed. We can assess those properties by studying the quantile-quantile plot (Q-Q plot) and running the Ljung-Box test, which we’ll explore in section 6.4.3. If the analysis leads us to conclude that the residuals are completely random, we have a model ready for forecasting. Otherwise, we must try a different set of values for p and q and start the process over."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Understanding the Akaike information criterion (AIC)\n",
+    "\n",
+    "#### Before covering the steps outlined in figure 6.6, we need to determine how we will choose the best model of all the models that we will fit. Here we will use the Akaike information criterion (AIC) to select the optimal model.\n",
+    "\n",
+    "#### The AIC estimates the quality of a model relative to other models. Given that there will be some information lost when a model is fitted to the data, the AIC quantifies the relative amount of information lost by the model. The less information lost, the lower the AIC value and the better the model.\n",
+    "\n",
+    "#### The AIC is a function of the number of estimated parameters k and the maximum value of the likelihood function for the model L̂, as shown in equation 6.8.\n",
+    "\n",
+    "- AIC 2k – 2ln(L̂)\n",
+    "- The lower the value of the AIC, the better the model. Selecting according to the AIC allows us to keep a balance between the complexity of a model and its goodness of fit to the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import product\n",
+    " \n",
+    "ps = range(0, 4, 1)\n",
+    "qs = range(0, 4, 1)\n",
+    " \n",
+    "order_list = list(product(ps, qs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
+    "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
+    "from statsmodels.tsa.arima_process import ArmaProcess\n",
+    "from statsmodels.tsa.stattools import adfuller\n",
+    "from tqdm import tqdm_notebook\n",
+    "from itertools import product\n",
+    "from typing import Union\n",
+    "import pandas as pd\n",
+    "\n",
+    "def optimize_ARMA(endog: Union[pd.Series, list], order_list: list) -> pd.DataFrame:\n",
+    "    \n",
+    "    results = []\n",
+    "    \n",
+    "    for order in tqdm_notebook(order_list):\n",
+    "        try: \n",
+    "            model = SARIMAX(endog, order=(order[0], 0, order[1]), simple_differencing=False).fit(disp=False)\n",
+    "        except:\n",
+    "            continue\n",
+    "            \n",
+    "        aic = model.aic\n",
+    "        results.append([order, aic])\n",
+    "        \n",
+    "    result_df = pd.DataFrame(results)\n",
+    "    result_df.columns = ['(p,q)', 'AIC']\n",
+    "    \n",
+    "    #Sort in ascending order, lower AIC is better\n",
+    "    result_df = result_df.sort_values(by='AIC', ascending=True).reset_index(drop=True)\n",
+    "    \n",
+    "    return result_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bb/2qsf8cm95jg05zrms2_8m2qr0000gn/T/ipykernel_64086/2721766129.py:15: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  for order in tqdm_notebook(order_list):\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e0fc9f150c654982838d4a61f83effd4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/maukanmir/miniforge3/envs/machine-learning-env/lib/python3.9/site-packages/statsmodels/tsa/statespace/sarimax.py:978: UserWarning: Non-invertible starting MA parameters found. Using zeros as starting parameters.\n",
+      "  warn('Non-invertible starting MA parameters found.'\n",
+      "/Users/maukanmir/miniforge3/envs/machine-learning-env/lib/python3.9/site-packages/statsmodels/tsa/statespace/sarimax.py:966: UserWarning: Non-stationary starting autoregressive parameters found. Using zeros as starting parameters.\n",
+      "  warn('Non-stationary starting autoregressive parameters'\n",
+      "/Users/maukanmir/miniforge3/envs/machine-learning-env/lib/python3.9/site-packages/statsmodels/base/model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>(p,q)</th>\n",
+       "      <th>AIC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(1, 1)</td>\n",
+       "      <td>2801.407785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(2, 1)</td>\n",
+       "      <td>2802.906070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(1, 2)</td>\n",
+       "      <td>2802.967762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(0, 3)</td>\n",
+       "      <td>2803.666793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(1, 3)</td>\n",
+       "      <td>2804.524027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>(3, 1)</td>\n",
+       "      <td>2804.588567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>(2, 2)</td>\n",
+       "      <td>2804.822282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>(3, 3)</td>\n",
+       "      <td>2806.128015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>(2, 3)</td>\n",
+       "      <td>2806.175380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>(3, 2)</td>\n",
+       "      <td>2806.894930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>(0, 2)</td>\n",
+       "      <td>2812.840730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>(0, 1)</td>\n",
+       "      <td>2891.869245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>(3, 0)</td>\n",
+       "      <td>2981.643911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>(2, 0)</td>\n",
+       "      <td>3042.627787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>(1, 0)</td>\n",
+       "      <td>3207.291261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>(0, 0)</td>\n",
+       "      <td>3780.418416</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     (p,q)          AIC\n",
+       "0   (1, 1)  2801.407785\n",
+       "1   (2, 1)  2802.906070\n",
+       "2   (1, 2)  2802.967762\n",
+       "3   (0, 3)  2803.666793\n",
+       "4   (1, 3)  2804.524027\n",
+       "5   (3, 1)  2804.588567\n",
+       "6   (2, 2)  2804.822282\n",
+       "7   (3, 3)  2806.128015\n",
+       "8   (2, 3)  2806.175380\n",
+       "9   (3, 2)  2806.894930\n",
+       "10  (0, 2)  2812.840730\n",
+       "11  (0, 1)  2891.869245\n",
+       "12  (3, 0)  2981.643911\n",
+       "13  (2, 0)  3042.627787\n",
+       "14  (1, 0)  3207.291261\n",
+       "15  (0, 0)  3780.418416"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_df = optimize_ARMA(ARMA_1_1, order_list)\n",
+    "result_df   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Understanding residual analysis\n",
+    "\n",
+    "#### Up to this point, we have fit different ARMA(p,q) models to our simulated ARMA(1,1) process. Using the AIC as a model selection criterion, we found that an ARMA(1,1) model is the best model relative to all others that were fit. Now we must measure its absolute quality by performing an analysis on the model’s residuals."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The first step in residual analysis is the study of the quantile-quantile plot (Q-Q plot). The Q-Q plot is a graphical tool for verifying our hypothesis that the model’s residuals are normally distributed.\n",
+    "\n",
+    "#### The Q-Q plot is constructed by plotting the quantiles of our residuals on the y-axis against the quantiles of a theoretical distribution, in this case the normal distribution, on the x-axis. This results in a scatterplot. We are comparing the distribution to a normal distribution because we want the residuals to be similar to white noise, which is normally distributed.\n",
+    "\n",
+    "#### A Q-Q plot is a plot of the quantiles of two distributions against each other. In time series forecasting, we plot the distribution of our residuals on the y-axis against the theoretical normal distribution on the x-axis.\n",
+    "\n",
+    "#### This graphical tool allows to us to assess the goodness of fit of our model. If the distribution of our residuals is similar to a normal distribution, we will see a straight line lying on y = x. This means that our model is a good fit, because the residuals are similar to white noise.\n",
+    "\n",
+    "#### On the other hand, if the distribution of our residuals is different from a normal distribution, we will see a curved line. We can then conclude that our model is not a good fit, since the residuals’ distribution is not close to a normal distribution, and therefore the residuals are not similar to white noise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The Ljung-Box test is a statistical test that tests if the autocorrelation of a group of data is significantly different from 0. In our case, we will apply the Ljung-Box test to the model’s residuals to assess whether they are correlated or not. The null hypothesis states that the data is independently distributed, meaning that there is no autocorrelation.\n",
+    "\n",
+    "- The Ljung-Box test is a statistical test that determines whether the autocorrelation of a group of data is significantly different from 0.\n",
+    "\n",
+    "#### In time series forecasting, we apply the Ljung-Box test on the model’s residuals to test whether they are similar to white noise. The null hypothesis states that the data is independently distributed, meaning that there is no autocorrelation. If the p-value is larger than 0.05, we cannot reject the null hypothesis, meaning that the residuals are independently distributed. Therefore, there is no autocorrelation, the residuals are similar to white noise, and the model can be used for forecasting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
