added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Modeling-complex-time.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Modeling-complex-time.ipynb
@@ -506,9 +506,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lb_pvalue\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.stats.diagnostic import acorr_ljungbox\n",
+    "\n",
+    "lbvalue, pvalue = acorr_ljungbox(residuals, np.arange(1, 11, 1))\n",
+    "\n",
+    "print(pvalue)"
+   ]
   }
  ],
  "metadata": {
