added new notes

--- a/Mathematics/Time-Series/Forecasting-With-Python/Modeling-complex-time.ipynb
+++ b/Mathematics/Time-Series/Forecasting-With-Python/Modeling-complex-time.ipynb
@@ -783,6 +783,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- p (AR order): This is the number of lag observations included in the model, or the lag order. It represents the number of past data points that the model considers to predict the current value in a time series.\n",
+    "\n",
+    "- q (MA order): This is the order of the moving average part. It represents the number of lagged forecast errors that the model uses to predict the current value."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
